--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,9 +1,39 @@
 <h1>Pets</h1>
 
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Pages
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="/pets/new">Make a new pet</a></li>
+    <li><a class="dropdown-item" href="/pets">All Pets</a></li>
+    <li><a class="dropdown-item" href="/login">Login</a></li>
+  </ul>
+</div>
+
+
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <% @pets.each do |pet| %>
+
+    <div class="col-md-6">
+      <div class="card">
+        <img src="<%= pet.image %>" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"><%= pet.name %></h5>
+          <p class="card-text"><%= pet.breed %> </p>
+          <p><a href="/pets/<%= pet.id %>">More info</a></p>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
+</div>
 <% @pets.each do |pet| %>
   <p><strong>id:</strong> <%= pet.id %><p>
-  <p><strong>name:</strong> <%= pet.name %><p>
-  <a href="/pets/<%= pet.id %>">More info</a>
+  <p><strong>Name:</strong> <%= pet.name %><p>
+  <p><strong>Breed:</strong> <%= pet.breed %><p>
+  <p>image: <%= pet.image %></p>
+
   <hr />
 <% end %>
 
