--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,9 +1,8 @@
 <h1>Pet</h1>
 
 <p><strong>Name:</strong> <%= @pet.name %><p>
-<p><strong>id:</strong> <%= @pet.id %><p>
 <p><strong>Breed:</strong> <%= @pet.breed %><p>
-<p><strong>Photo:</strong> <%= @pet.image %><p>
+<p>Image: <%= pet.image %></p>
 
 
 <a href="/pets/<%= @pet.id %>/edit">Edit pet</a>
