--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -11,13 +11,14 @@
   </ul>
 </div>
 
+<hr>
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <% @pets.each do |pet| %>
 
     <div class="col-md-6">
       <div class="card">
-        <img src="<%= pet.image %>" class="card-img-top" alt="...">
+        <img src="<%= pet.image %>" width="200" position="fixed" height="200"" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"><%= pet.name %></h5>
           <p class="card-text"><%= pet.breed %> </p>
