--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,9 +1,9 @@
 <h1>Pet</h1>
 
 <p><strong>Name:</strong> <%= @pet.name %><p>
-<p><strong>Breed:</strong> <%= @pet.breed %><p>
-<p>Image: <%= pet.image %></p>
+<p><strong>Species:</strong> <%= @pet.breed %><p>
+<%= image_tag @pet.image %>
+<br>
 
-
-<a href="/pets/<%= @pet.id %>/edit">Edit pet</a>
+<a href="/pets/<%= @pet.id %>/edit">Edit pet</a> |
 <a href="/pets/<%= @pet.id %>" data-turbo-method="delete">Remove pet</a>
