--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Pet</h1>
 
 <p><strong>Name:</strong> <%= @pet.name %><p>
-<p><strong>Species:</strong> <%= @pet.breed %><p>
+<p><strong>Breed/Species:</strong> <%= @pet.breed %><p>
 <%= image_tag @pet.image %>
 <br>
 
