--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -2,32 +2,29 @@
 
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Pages
+    New Pet
   </button>
   <ul class="dropdown-menu">
     <li><a class="dropdown-item" href="/pets/new">Make a new pet</a></li>
     <li><a class="dropdown-item" href="/pets">All Pets</a></li>
-    <li><a class="dropdown-item" href="/login">Login</a></li>
-  </ul>
+    </ul>
 </div>
 
 <hr>
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <% @pets.each do |pet| %>
-
     <div class="col-md-6">
       <div class="card">
-        <img src="<%= pet.image %>" width="200" position="fixed" height="200"" class="card-img-top" alt="...">
+        <img src="<%= pet.image %>" width="200" height="200" class="card-img-top" alt="PetPhoto">
         <div class="card-body">
           <h5 class="card-title"><%= pet.name %></h5>
           <p class="card-text"><%= pet.breed %> </p>
-          <p><a href="/pets/<%= pet.id %>">More info</a></p>
+          <p><a href="/pets/<%= pet.id %>">More info on <%= pet.name %></a></p>
         </div>
       </div>
     </div>
   <% end %>
-
 </div>
 
 
